--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,10 @@
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
+    <string name="add_article_date">開始日：</string>
+    <string name="update_article_date">更新日：</string>
 
     <string name="add_title">タイトル</string>
     <string name="add_edit_text_placeholder">詳細を入力してください</string>
+
 </resources>
