--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="add_title">タイトル</string>
     <string name="add_edit_text_placeholder">詳細を入力してください</string>
 
+    <string name="list_menu_condition">表示切替</string>
+    <string name="list_menu_add">登録</string>
 </resources>
