--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
 
     <string name="list_menu_condition">表示切替</string>
     <string name="list_menu_add">登録</string>
+    <string name="edit_add_complete">登録しました</string>
 </resources>
