--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="edit_reset_cycle">１つ前に戻しました</string>
     <string name="edit_reset_cycle_all">初めからに更新しました</string>
 
+    <string name="select_tag_message">ラベルを指定</string>
     <string name="select_tag_do">登録</string>
     <string name="select_tag_cancel">キャンセル</string>
 </resources>
